--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,7 +1,14 @@
-<div class="form-group">
-  <%- if devise_mapping.omniauthable? %>
-    <%- resource_class.omniauth_providers.each do |provider| %>
-      <%= link_to provider_icon(provider), omniauth_authorize_path(resource_name, provider) %><br />
+<div style="margin-top: 33vh">
+  <div class="d-flex flex-row justify-content-center">
+    <h4>Login using ...</h4>
+  </div>
+  <div class="d-flex flex-row justify-content-center">
+    <%- if devise_mapping.omniauthable? %>
+      <%- resource_class.omniauth_providers.each do |provider| %>
+        <span class="mr-3">
+          <%= link_to provider_icon(provider), omniauth_authorize_path(resource_name, provider) %><br />
+        </span>
+      <% end -%>
     <% end -%>
-  <% end -%>
+  </div>
 </div>
